# geoarches

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  RELEASE.md  mkdocs.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: functional_tests.yml  integration_tests.yml  lint.yml  release.yml  unit_tests.yml
docs/: contributing.md  index.md  installation.md
docs/archesweather/: evaluate.md  reproduce.md  run.ipynb  setup.md
docs/contributing/: contribute.md
docs/getting_started/: installation.md  using_geoarches.md
docs/user_guide/: api.md  evaluate.md  index.md  train.md
documentation/: archesweather-tutorial.ipynb
geoarches/: data  evalstore  main_hydra.py  model_rollouts  modelstore
geoarches/backbones/: archesweather.py  archesweather_layers.py  dit.py
geoarches/configs/: config.yaml  test_agen.yaml
geoarches/dataloaders/: cmip.py  cmip_full_ocean.py  cmip_random_lead_time.py  dcpp.py  dcpp_anomalies.py  era5.py  era5_constants.py  era5pred.py  nan_util.py  netcdf.py  netcdf_new.py  timestep.py  zarr.py
geoarches/download/: dl_aw_models.sh  dl_era.py  dl_hres.py
geoarches/evaluation/: compute_quantiles.py  eval_multistep.py  metric_registry.py  plot.py  plot_rmse_per_year.py  plot_spatial_rmse.py
geoarches/inference/: encode_dataset.py
geoarches/lightning_modules/: base_module.py  diffusion.py  diffusion_ensemble.py  forecast.py
geoarches/metrics/: brier_skill_score.py  deterministic_metrics.py  deterministic_metrics_legacy.py  ensemble_metrics.py  (+4 more)
tests/: test_main_hydra.py  test_main_hydra_checkpointing.py
(+98 files in other folders)
